--- a/src/public/css/userAllProducts.css
+++ b/src/public/css/userAllProducts.css
@@ -97,13 +97,37 @@
     
     img { max-width: 100%; aspect-ratio: 1 / 1 };
 
+    a, p { text-decoration: none; color: black};
+
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
     .product {
       background-color: white; 
       max-width: 220px;
       padding: 5px 12px;
       scroll-snap-align: none start;
       border-radius: 10px;
-      a, p { text-decoration: none; color: black}
+
+      #product-price {
+        background-color: #FFDFDF;
+        padding: 5px;
+        width: fit-content;
+        border-radius: 5px;
+        font-weight: bolder;
+      }
+
+      #product-details {
+        display: flex; 
+        height: 50px; 
+        text-overflow: ellipsis; 
+        overflow: hidden;
+        word-wrap: break-word;
+        font-size: 14px;
+      }
     };
     
     .product:hover {
@@ -113,15 +137,6 @@
       scale: 1.05;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
-  }
-
-  #product-details {
-    display: flex; 
-    height: 50px; 
-    text-overflow: ellipsis; 
-    overflow: hidden;
-    word-wrap: break-word;
-    font-size: 14px;
   }
 
   .pagination {
