--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -47,12 +47,12 @@
         </thead>
         <tbody>
           <tr>
-            <td>Tổng số sản phẩm</td>
+            <td>Tổng sản phẩm</td>
             <td>{{allProducts}}</td>
             <td></td>
           </tr>
           <tr>
-            <td>Tổng số thương hiệu</td>
+            <td>Tổng thương hiệu</td>
             <td>{{allBrands}}</td>
             <td><a href="">Chi tiết</a></td>
           </tr>
@@ -91,9 +91,9 @@
             <td></td>
           </tr>
           <tr>
-            <td>Đơn hàng có doanh thu cao nhất</td>
-            <td>{{maxOrderValueToCurrency}} đ</td>
-            <td><a href="">Chi tiết</a></td>
+            <td>Đơn có doanh thu cao nhất</td>
+            <td>{{maxValueOrderToCurrency}} đ</td>
+            <td><a href="/admin/all-orders/{{maxValueOrderId}}">Chi tiết</a></td>
           </tr>
           <tr>
             <td>Khách hàng mua nhiều nhất</td>
