--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -68,7 +68,7 @@
           </tr>
           <tr>
             <td>Sản phẩm đã xoá</td>
-            <td></td>
+            <td>{{deletedProducts}}</td>
             <td><a href="/admin/trash">Chi tiết</a></td>
           </tr>
         </tbody>
@@ -87,12 +87,12 @@
         <tbody>
           <tr>
             <td>Tổng doanh thu</td>
-            <td>{{totalRevenueToCurrency}} đ</td>
+            <td>{{totalRevenueToCurrency}}đ</td>
             <td></td>
           </tr>
           <tr>
             <td>Đơn có doanh thu cao nhất</td>
-            <td>{{maxValueOrderToCurrency}} đ</td>
+            <td>{{maxValueOrderToCurrency}}đ</td>
             <td><a href="/admin/all-orders/{{maxValueOrderId}}">Chi tiết</a></td>
           </tr>
           <tr>
