--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -30,7 +30,7 @@
     </a>
     <a class="sidebar-button" id="update-profile">
       <i class="fi fi-br-circle-user"></i>
-      <p>Cập Nhật Thông Tin Cá Nhân</p>
+      <p>Thông Tin Cá Nhân</p>
     </a>
     <a href="/authentication/sign-in" class="sidebar-button" id="log-out">
       <i class="fi fi-br-exit"></i>
