--- a/src/public/css/adminHome.css
+++ b/src/public/css/adminHome.css
@@ -44,8 +44,12 @@
           border-bottom-left-radius: 10px; */
           border: 1px solid black;
           border-radius: 10px;
-
         }
+
+        td:nth-child(2) {
+          font-size: x-large;
+        }
+
         td:last-child {
           border-top-right-radius: 10px;
           border-bottom-right-radius: 10px;
