--- a/src/resource/views/admin/trash.hbs
+++ b/src/resource/views/admin/trash.hbs
@@ -1,5 +1,5 @@
 <div class="admin-trash-products-container">
-  <div class="board-sidebar">
+  <div class="board-title">
       <p>Sản phẩm đã xoá: {{totalDeletedProduct}}</p>
   </div>
 
