--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -382,7 +382,7 @@ if (`{{successful}}` && `{{newOrderId}}`) {
     <h3>Mã đơn hàng của bạn là: {{newOrderId}}</h3>
     <h5>Nếu là người mới, bạn hãy lưu lại mã này để theo dõi đơn hàng ở mục 'Đơn hàng' nhé</h5>
     <h5>Còn nếu bạn đã có tài khoản rồi thì có thể theo dõi đơn hàng ở mục 'Thông tin cá nhân' luôn nha</h5>
-    <a href="/home"><button>OK</button></a>
+    <a href="/"><button>OK</button></a>
   `
   document.body.appendChild(orderSuccessfullyMessage)
 }
