--- a/src/public/css/adminAllOrders.css
+++ b/src/public/css/adminAllOrders.css
@@ -115,6 +115,10 @@
 
 @media screen and (max-width: 700px) {
   .admin-all-orders-container {
+    .board-title {
+      p { font-size: 25px;}
+    }
+    
     tbody, thead {
       td:nth-child(1) { display: none;}
       td:nth-child(2) { display: none;}
