--- a/src/public/css/adminHome.css
+++ b/src/public/css/adminHome.css
@@ -1,9 +1,18 @@
 .admin-home-container {
-  h1 {
-    text-transform: capitalize;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    text-align: center;
+  .board-title {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+
+    p {
+      font-size: 30px;
+      text-transform: uppercase;
+      font-weight: bolder;
+      border: 2px solid #D1A6A6;
+      padding: 20px;
+    }
   }
 
   .info-table {
@@ -80,7 +89,10 @@
 
 @media screen and (max-width: 700px) {
   .admin-home-container {
-    h1 { font-size: 25px;}
+    .board-title {
+      p { font-size: 20px;}
+    }
+
     .info-table {
       grid-template-columns: auto !important;
     }
