--- a/src/public/css/adminTrashProducts.css
+++ b/src/public/css/adminTrashProducts.css
@@ -1,5 +1,5 @@
 .admin-trash-products-container {
-  .board-sidebar {
+  .board-title {
     width: 100%;
     display: flex;
     align-items: center;
