--- a/src/public/css/adminUpdateProfile.css
+++ b/src/public/css/adminUpdateProfile.css
@@ -89,3 +89,11 @@
     border: 1px solid white ;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .admin-update-profile-container {
+    form {
+      grid-template-columns: auto !important
+    }
+  }
+}
