--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -93,7 +93,7 @@
             <td></td>
           </tr>
           <tr>
-            <td>Đơn có doanh thu cao nhất</td>
+            <td>Đơn có giá trị cao nhất</td>
             <td>{{maxValueOrderToCurrency}}đ</td>
             <td><a href="/admin/all-orders/{{maxValueOrderId}}">Chi tiết</a></td>
           </tr>
