--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -112,6 +112,6 @@
   var greetingLine = document.querySelector('div.board-title').querySelector('p')
   var date = new Date()
   var dateNow = date.getDate() + '/' + (date.getMonth()+1) + '/' + date.getFullYear()
-  greetingLine.innerText = `Doanh thu ngày ${dateNow}`
+  greetingLine.innerText = `Thống kê ngày ${dateNow}`
 
 </script>
