--- a/src/public/css/adminOrder.css
+++ b/src/public/css/adminOrder.css
@@ -19,9 +19,9 @@
 
     tbody {
       td {
-        height: 50px;
+        height: fit-content;
         border-bottom: 1px solid black;
-        padding: 5px 0;
+        padding: 10px;
 
         label {
           padding: 5px;
@@ -36,9 +36,36 @@
     }
   }
 
+  #table-1 {
+    tbody {
+      tr:last-child {
+        td:last-child {
+          display: grid;
+          gap: 10px;
+        }
+      }
+    }
+  }
+
+  #table-2 {
+    tbody {
+      td:nth-child(1) {
+        p {
+          overflow: hidden;
+          display: -webkit-box;
+          -webkit-line-clamp: 2; /* number of lines to show */
+          /* line-clamp: 2;  */
+          -webkit-box-orient: vertical;
+          margin-block-start: 0px !important;
+          margin-block-end: 0px !important;
+        }
+      }
+    }
+  }
+
   button {
     margin-top: 10px;
-    width: 10%; 
+    width: fit-content; 
     height: 30px;
     background-color: white;
     color: #D1A6A6;
