--- a/src/resource/views/users/allBrands.hbs
+++ b/src/resource/views/users/allBrands.hbs
@@ -5,7 +5,7 @@
   </div>
   
   <div class="all-brands">
-    {{#each product}}
+    {{#each brand}}
       <div class="brand">
         <a href="/all-products/all-brands/{{this}}">
           {{this}}
