--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -88,7 +88,7 @@
   </form>
 
   <div class="button">
-    <button class="next-button">Tiến hành đặt hàng</button>
+    <button class="next-button">Tiếp tục</button>
   </div>
 </div>
 
