--- a/src/resource/views/partials/userAdvertise.hbs
+++ b/src/resource/views/partials/userAdvertise.hbs
@@ -1,6 +1,6 @@
 <div class="slideshow-container">
   <div class="mySlides fade">
-    <img src="https://cdn.mykiot.vn/2020/12/1609318855e1254ebb9274cc71451b02645764ea62.jpg">
+    <img src="https://theme.hstatic.net/200000551679/1001282356/14/slider_1_master.jpg?v=206">
   </div>
 
   <div class="mySlides fade">
