--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -1,6 +1,6 @@
 <div class="store-logo">
   <a href="/">
-    <image src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp"/>
+    <image src="https://theme.hstatic.net/200000551679/1001282356/14/logo.png?v=206"/>
   </a>
 
   <div class="responsive-menu" style="display: none;">
