--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -1,11 +1,11 @@
 <div class="sign-in-container">
   <div class="sign-in-form">
-    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070715/web-img/4_lnwzuk.jpg">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQArLbUy974kgbRouxrDjevNDRM871swZMclQ&s">
     <div class="form-input">
       <p class="form-title">Đăng nhập</p>
       <form id="form-3" method="post" action="/authentication/checking-account">
         <div class="form-group">
-          <input type="text" class="form-control" id="email" name="email" placeholder="Email">
+          <input type="text" class="form-control" id="email" name="email" placeholder="Tài khoản">
           <span class="form-message"></span>
         </div>
 
