--- a/src/public/css/userAllProducts.css
+++ b/src/public/css/userAllProducts.css
@@ -92,6 +92,7 @@
     grid-template-columns: repeat(5, minmax(min(11.25rem, 100%), 1fr));
     scroll-snap-type: x mandatory;
     overflow-x: scroll;
+    max-width: 1300px;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
     
