--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1711070715/web-img/4_lnwzuk.jpg" />
+  <link rel="stylesheet" href="/css/adminAllCustomers.css">
   <link rel="stylesheet" href="/css/adminAllOrders.css">
   <link rel="stylesheet" href="/css/adminAllProducts.css">
   <link rel="stylesheet" href="/css/adminCreateProduct.css">
+  <link rel="stylesheet" href="/css/adminCustomer.css">
   <link rel="stylesheet" href="/css/adminHome.css">
   <link rel="stylesheet" href="/css/adminOrder.css">
   <link rel="stylesheet" href="/css/adminSidebar.css">
